--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <header>
     <h2 class='header-logo'>Header Logo</h2>
     <div class="div-header-link">
-      <div>header link one</div>
-      <div>header link two</div>
-      <div>header link three</div>
+      <a href='hello.ts'>header link one</a>
+      <a href='hello.ts'>header link one</a>
+      <a href='hello.ts'>header link one</a>
     </div>
   </header>
 <!-- MAIN LANDING PAGE -->
