Anchor link to header-link class

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <header>
     <h2 class='header-logo'>Header Logo</h2>
     <div class="div-header-link">
-      <a href='hello.ts'>header link one</a>
-      <a href='hello.ts'>header link one</a>
-      <a href='hello.ts'>header link one</a>
+      <a class="header-link" href='hello.ts'>header link one</a>
+      <a class="header-link" href='hello.ts'>header link one</a>
+      <a class="header-link" href='hello.ts'>header link one</a>
     </div>
   </header>
 <!-- MAIN LANDING PAGE -->
