Complete Header Section in CSS

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <h2 class='header-logo'>Header Logo</h2>
     <div class="div-header-link">
       <a class="header-link" href='hello.ts'>header link one</a>
-      <a class="header-link" href='hello.ts'>header link one</a>
-      <a class="header-link" href='hello.ts'>header link one</a>
+      <a class="header-link" href='hello.ts'>header link two</a>
+      <a class="header-link" href='hello.ts'>header link three</a>
     </div>
   </header>
 <!-- MAIN LANDING PAGE -->
