Add full style of the page

--- a/index.html
+++ b/index.html
@@ -21,19 +21,20 @@
   </header>
 <!-- MAIN LANDING PAGE -->
   <main>
-    <div class="left">
-      <h1> The website is awesome</h1>
+    <div class="left-container">
+      <h1 class='main-text'> The website is<br> awesome</h1>
       <p class='description'>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
       <button= class='button-signup js-button-signup'>Sign up</button>
     </div>
-    <div class='right'>
-      <img src='' alt='this is a placeholder for an image'>
+
+    <div class='right-container'>
+
     </div>
   </main>
 <!-- PAGE 2 -->
   <div class="information-page">
     <h2 class='info-title'>Some random information.</h2>
-    <div class="box-aline">
+    <div class="box-align">
       <div class="info-column">
         <div class="blue-block"></div>
         <p class='information-text'>this is some subtext under an illustration or image</p>
@@ -57,15 +58,26 @@
   </div>
 <!-- PAGE 3 -->
   <div class="quote-page">
-    <blockquote>This is an inspiring quote, or a testimonial from a customer. Maybe It's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</blockquote>
-    <p ='blockquote-author'>-Thor, God of Thunder</p>
+    <div class='quote-container'>
+      <blockquote>This is an inspiring quote, or a testimonial from a customer. Maybe It's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</blockquote>
+      <p class='blockquote-author'>-Thor, God of Thunder</p>
+
+    </div>
+
   </div>
 <!-- PAGE 4 -->
   <div class="call-to-action-page">
     <div class='quote-box'>
-      <div>Call to action! It's time!</div>
-      <div>Sign up for our product by clicking that button right over there!</div>
-      <button>Sign Up</button>
+      <div class='call-to-action-left'>
+        <div>Call to action! It's time!</div>
+        <div>Sign up for our product by clicking that button right over there!</div>
+
+      </div>
+      <div class="call-to-action-right">
+        <button class='sign-up-button'>Sign Up</button>
+
+      </div>
+      
     </div>
   </div>
 <!-- Footer -->
